  and instance.tsp.tour respectively in the same folder and assigns opt.tour.length
  and opt.tour accordingly.
* autoplot now can be passed a list of paths. The function then makes use of ggplot2
  facets and plots each path in a single facet. This works for clustered instances
  and/or instances with depots as well.

netgen v1.3 (Release data: 2016-01-16):
===========

* Default number of digits for exportToTSPlibFormat is 10 now
* Added function isEuclidean
* rescaleNetwork now supports instances with depots
* rescaleNetwork now recomputes distance matrix
* rescaleNetwork throws error on non-euclidean networks
* Added function getTSPInstancesOverview to get an overview of files in TSPlib
  format
* Added function filterTSPInstances which allows to subset/filter TSP instances
  in TSPlib format by properties.
* Networks have an additional property edge.weight.type now (see TSPlib documentation
  for details)
* Added function getValidEdgeWeightTypes

netgen v1.2 (Release data: 2015-11-24):
===========

* last line of TSPlib export now containts EOF string
* function importFromTSPlibFormat now has an additional argument round.distances with default value
  TRUE which decides whether distances of EUC_2D instances should be rounded to the nearest integer value

netgen v1.1 (Release data: 2015-05-19):
===========

* added rescaleNetwork
* network objects now store the distance matrix internally
* network objects now have name and comment field
* lower and upper bound are now optional for makeNetwork/makeClusteredNetwork
* added possibility to pass point matching or point matching algorithm to morphInstances
* getOptimalPointAssignment now has another parameter method (new method to
  solve the assigment to optimality)
* importFromTSPlibFormat and exportToTSPlibFormat for storing networks in the TSPlib format