@@ -19,7 +19,22 @@ makeConvexCombination = function(coords1, coords2, alpha) {
 #   Second numeric vector.
 # @return [numeric(1)]
 euklideanDistance = function(x, y) {
-  sqrt(sum((x - y)^2))
+  sqrt(crossprod(x - y))
+}
+
+# Computes the euclidean distance between a vector a a matrix.
+#
+# @param x [numeric]
+#   First numeric vector.
+# @param y [numeric]
+#   Numeric matrix.
+# @return [numeric]
+euklideanDistances = function(x, y) {
+  assertNumeric(x, min.len = 2L, any.missing = FALSE, all.missing = FALSE)
+  assertMatrix(y, any.missing = FALSE, all.missing = FALSE, ncol = length(x))
+  sapply(1:nrow(y), function(i) {
+    euclidean(x, y[i, ])
+  })
 }
 
 # Generate random string.
